# ChangeLog for dev-util/shtool
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/shtool/ChangeLog,v 1.27 2009/09/11 21:48:22 patrick Exp $

*shtool-2.0.8 (11 Sep 2009)

  11 Sep 2009; Patrick Lauer <patrick@gentoo.org> +shtool-2.0.8.ebuild:
  Bump

  19 Mar 2007; Bryan Østergaard <kloeri@gentoo.org> metadata.xml:
  Remove ka0ttic from metadata.xml due to retirement.

  22 Jan 2007; Diego Pettenò <flameeyes@gentoo.org> shtool-2.0.2.ebuild,
  shtool-2.0.3.ebuild, shtool-2.0.4.ebuild:
  Use mirror://gnu/ rather than ftp.gnu.org.

*shtool-2.0.4 (04 Feb 2006)

  04 Feb 2006; Mike Frysinger <vapier@gentoo.org> +shtool-2.0.4.ebuild:
  Version bump.

*shtool-2.0.3 (03 Oct 2005)

  03 Oct 2005; Aaron Walker <ka0ttic@gentoo.org>
  -files/shtool-2.0.1-fix-insecure-tmp-creation.diff,
  -files/shtool-2.0.1-r2-fix-insecure-tmp-creation.diff,
  -shtool-2.0.1-r1.ebuild, -shtool-2.0.1-r2.ebuild, +shtool-2.0.3.ebuild:
  Version bump; tidy old ebuilds/patches.

  23 Aug 2005; Aron Griffis <agriffis@gentoo.org> shtool-2.0.2.ebuild:
  stable on ia64

  16 Aug 2005; Aaron Walker <ka0ttic@gentoo.org> shtool-2.0.2.ebuild:
  Stable on x86,sparc.

  17 Jun 2005; Aaron Walker <ka0ttic@gentoo.org> metadata.xml:
  Added to dev-tools herd.

*shtool-2.0.2 (15 Jun 2005)

  15 Jun 2005; Aaron Walker <ka0ttic@gentoo.org> +shtool-2.0.2.ebuild:
  Version bump.

  04 Jun 2005; Bryan Østergaard <kloeri@gentoo.org> shtool-2.0.1-r2.ebuild:
  Stable on ia64, bug 93782.

  31 May 2005; Gustavo Zacarias <gustavoz@gentoo.org>
  shtool-2.0.1-r2.ebuild:
  Stable on sparc wrt #93782

*shtool-2.0.1-r2 (31 May 2005)

  31 May 2005; Aaron Walker <ka0ttic@gentoo.org>
  +files/shtool-2.0.1-r2-fix-insecure-tmp-creation.diff,
  -shtool-2.0.1.ebuild, +shtool-2.0.1-r2.ebuild:
  Another revision bump for bug 93782. Updated patch from taviso.

  26 May 2005; Bryan Østergaard <kloeri@gentoo.org> shtool-2.0.1-r1.ebuild:
  Stable on ia64, bug 93782.
