@@ -1,10 +1,20 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST shtool-2.0.2.tar.gz 91684 RMD160 eb30e2f997b1872a4d2aaf88caaf1846427ce36b SHA1 d8364ee932dec98cf530b66659ec73048c09994d SHA256 3479f0e884b7946acb9b2641c7ef40575b7f9ab3cb7ca88911d58617615ea28f
 DIST shtool-2.0.3.tar.gz 92148 RMD160 bb93be3ddde8e894cbac0ea1d27eaf26b59f8ed3 SHA1 08c94daf22fcc3186efe605cefac4cc9517e9f79 SHA256 92a0fff0a1aa69d9b284b4ebf8d9ed009119575ca2313773c86bf099a4a2edc6
 DIST shtool-2.0.4.tar.gz 92616 RMD160 5429334b6e98bcc1142bbc6223d6cc845244ba5b SHA1 ca471f838330ea275df10b511c5058eff55709e8 SHA256 6e67931b482fcfc865ec6d2e4a3338b6ca281e2afcb190c2a91a45d7ae5a615d
 DIST shtool-2.0.8.tar.gz 97033 RMD160 0f8b9ad303f85ea71537c3d541fc3c157f554c45 SHA1 4b974f92d3932ea121e311e3b22c328d3b3572d4 SHA256 1298a549416d12af239e9f4e787e6e6509210afb49d5cf28eb6ec4015046ae19
-EBUILD shtool-2.0.2.ebuild 701 RMD160 4cd26920cd76e5d8036f613537accbd3e273f0f7 SHA1 4e1f607f93b11e8d569e9b15fbb69d0e6ffeb831 SHA256 ffe67e8757dfc77fc7349d63cb7e87c3fb04d376bdc6bf7adf3cc6a844c0c386
+EBUILD shtool-2.0.2.ebuild 701 RMD160 f3e3b8bf67052c1a7c078588d186fe8b0a093559 SHA1 7e1efa8625937be94e6574212c72ba13c93ea156 SHA256 05278452673ff3a1e848643076d14278bc8e7a655c960f99af5c92582036a5df
 EBUILD shtool-2.0.3.ebuild 732 RMD160 94c186f228a4147ffd4235900a453d3e4543aa9d SHA1 4a466895a08aab4d89661daaa2de7d1825433e7e SHA256 34e45a853940553c20e8099b3f4e7f035a2ce929bde2ae3635d382a86a891540
 EBUILD shtool-2.0.4.ebuild 732 RMD160 99632ca4a0d5a44ba985b07320b332b61d3b8fa2 SHA1 27428ea5f79618a80baf7d050e478905ca09e961 SHA256 01cbf40ae94c10a4cc04da3c2205b7955b97578b2feb4adefa7f146dc426fd0e
-EBUILD shtool-2.0.8.ebuild 730 RMD160 7926f4837aee15efe46d94576ff514f6e7c3ef70 SHA1 f168b48673208725d202b783adadb30892204147 SHA256 e9d4c3fc8da221f4440c90a0b4f3f17e044f431e4eaf9d6b612095a550ceb8a6
-MISC ChangeLog 3751 RMD160 29c0d9fa6db7eefb22f14d1b62fbb56807e844ca SHA1 c18398422c4389df4939998fc9bda78638be3c1d SHA256 8837e7556e7bc22340d2288376692e5279cf7ee531dd634e948a7f19f5c24dd6
+EBUILD shtool-2.0.8.ebuild 729 RMD160 6ecfc376fc8377008def67bfc03bbc21c29df219 SHA1 bcea4d63a7881493eff451e5b972587a8f2f7b65 SHA256 8ef002b3eba3d47e5f15ad1ddda79814e730ccd9a7301eca4dc6e513d0ace353
+MISC ChangeLog 3892 RMD160 168452b41cdc940796f3044ef9cce238b02e9e51 SHA1 099a3a5a2e56b82bbd45a7be57e13727f58e12a2 SHA256 376acdbfc54d365e010fd2697973301082bcb623dcbd114ba580effdc54b3d84
 MISC metadata.xml 163 RMD160 550da6b3a781aa96ffd5e99e373bde49cdc2ed30 SHA1 d44678d395f91799e0cff5b808e227a203520bd5 SHA256 4284d1b30ef24759f1c34ce51225d46b7312913508acf3469f8b66d72b176524
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.17 (GNU/Linux)
+
+iEYEARECAAYFAk8300oACgkQuQc30/atMkAQ5ACePOiyuk1UHr1Ftl+ygTHIgKs6
+7K8AnR594ESX/dNZfKyiKeb5D1hNhkmD
+=Syt5
+-----END PGP SIGNATURE-----
